--- a/data_cleaning_scratch.ipynb
+++ b/data_cleaning_scratch.ipynb
@@ -596,7 +596,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -611,8 +611,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
