README edits, and getting rid of the corrupt data

--- a/Ben's Scratch Code.ipynb
+++ b/Ben's Scratch Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -28,12 +28,12 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"data/Aviation_Data.csv\", delimiter=\",\")"
+    "df = pd.read_csv(\"project_data/Aviation_Data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "87951"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,14 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-49-f435589ba447>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-16-f435589ba447>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-50-9309ec45cd0c>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-17-9309ec45cd0c>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -342,14 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-51-29db5f22d264>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-18-29db5f22d264>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -365,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-52-38a9686ac8ab>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-19-38a9686ac8ab>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -388,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-53-a78600e353ec>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-20-a78600e353ec>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
        "11563"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "7552"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "55770"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "Name: Aircraft.Category, dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,14 +580,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-61-dab208b01915>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-28-dab208b01915>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "Name: Purpose.of.flight, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "['Personal', 'Instructional', 'Unknown', 'Aerial Application', 'Business']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
        "[47499, 9786, 6363, 4368, 3809]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,14 +741,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-83-1aee3a7d0dba>:10: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "<ipython-input-35-1aee3a7d0dba>:10: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(x, rotation=45);\n"
      ]
     },
